python/testdata/formatted_syntax_tb.txt
  File "<string>", line 1
    x = 10; y =10; def f;
                     ^
SyntaxError: invalid syntax
